--- a/aula-4/code/image-recognition.ipynb
+++ b/aula-4/code/image-recognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# importando a imagem\n",
-    "image = Image.open('../assets/da-filhote.jpg')\n",
+    "image = Image.open('../../assets/da-filhote.jpg')\n",
     "\n",
     "# image"
    ]
