detecção de obejtos aula 12

--- a/aula-4/code/image-recognition.ipynb
+++ b/aula-4/code/image-recognition.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# importando a imagem\n",
-    "image = Image.open('../../assets/da-filhote.jpg')\n",
+    "image = Image.open('../../assets/da-filhote.png')\n",
     "\n",
     "# image"
    ]
