detecção de bordas, shi-tomasi cornor detection aula-14

--- a/aula-13/code/edge-detection.ipynb
+++ b/aula-13/code/edge-detection.ipynb
@@ -294,6 +294,27 @@
    "source": [
     "plt.imshow(realImage)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# salvando imagem\n",
+    "cv2.imwrite('../../save/ovelha-borda-detectada.jpg', realImage)"
+   ]
   }
  ],
  "metadata": {
