término do work-serenity

--- a/atividade-3/code/find-and-recognize-unknown-face.ipynb
+++ b/atividade-3/code/find-and-recognize-unknown-face.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Encontrar e reconhecer rostos desconhecidos em uma fotografia com base em fotografias de pessoas conhecidas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
